			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * PORT: Fixed paths when using install-sh.  Richard O'Keefe.

  * ENHANCED: translation of t --> [a,b], ....  Richard O'Keefe.

  * FIXED: Bug#140: Various DESTDIR issues when installing the PDF
    documentation. Keri Harris.

  * ADDED: \uXXXX and \UXXXXXXXX syntax support and various enhancements
    in read and write as well as the documentation of escape sequences.
    Richard O'Keefe.

  * Make test suite skip Unicode filename and character classification
    tests in non-unicode environments. 

  * FIXED: Allow for ISO :- dynamic([a/1, b/2]).   Roger Scowen.

  * ENHANCED: Better error messages if locale cannot represent filenames.
    Richard O'Keefe.

  * PORT: Better check for GMP support, better message if GMP is not found
    and cleanup of test-suite to skip all GMP dependent tests if GMP is
    not present.

  * MODIFIED: Renamed library(netscape) into library(www_browser).  Extended
    and modernised browser detection.  Now also works on MacOSX.

  * ADDED: Allow calling PL_new_functor() before PL_initialise().


================================
VERSION 5.6.3 (January 19, 2006)
================================

  * FIXED: unify_with_occurs_check/2 fails to to occurs-check with
    attributed variables.  Tom Schrijvers.

  * FIXED: Thread resource exception handling in Linux 2.6.  Keri Harris.

================================
VERSION 5.6.2 (January 13, 2006)
================================

  * FIXED: writing of escape sequences for representation_errors(prolog)
    on streams.  Also fixed reading of '\x61\' and similar sequences.
    Pierre Nugues.

  * FIXED: Make thread time statistics work properly in Linux 2.6 kernels.
    Also some cleanup of the statistics code.
